# dictator

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
assets/: config.example.json  ping-down.opus  ping-up.opus
src/: app.rs  audio_feedback.rs  config.rs  hooks.rs  main.rs  messages.rs  shortcuts.rs  text_injection.rs  text_processing.rs  transcription.rs
src/audio/: capture.rs  feedback.rs  format.rs  mod.rs  sink.rs  wav_sink.rs
src/services/: mod.rs  recorder.rs
systemd/: dictator.service
