[package]
name = "dictator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
evdev = { version = "0.12", features = ["tokio"] }
futures = "0.3"
cpal = "0.15"
ringbuf = "0.3"
async-openai = "0.23"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rodio = "0.17"
hound = "3.5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
