[package]
name = "dictator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
evdev = { version = "0.13", features = ["tokio"] }
futures = "0.3"
cpal = "0.16"
ringbuf = "0.4"
async-openai = "0.30"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rodio = "0.21"
hound = "3.5"
anyhow = "1"
tempfile = "3.23"
tracing = "0.1"
tracing-subscriber = "0.3"
